fix bug causing sidebar container to be extended passed the bottom of the screen when Container overflows

--- a/frontend/src/styles/shared.css
+++ b/frontend/src/styles/shared.css
@@ -24,25 +24,36 @@ html, body {
     top: 0;
     left: 0;
     background-color: var(--dark-blue-background);
+    overflow: hidden;
 }
 
 .content-container{
     min-width: 78%;
     max-width: 78%;
-    min-height: 100vh;
+    height: 100vh;
     margin: 0;
     padding: 0;
+    overflow-y: auto;
+
+    scrollbar-width: thin;
+    scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
 }
+
+.content-container::-webkit-scrollbar {
+    width: 6px;
+}
+
 
 #sidebar-container{
     min-width: 22%;
     max-width: 22%;
-    min-height: 100vh;
+    height: 100vh;
     margin: 0;
     padding: 0;
     background-color: var(--darkish-blue-background);
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 #sidebar-logo-container{
